cabal-version:      2.4
name:               candle
version:            0.1.0.0
synopsis:           Minimalist web framework written in Haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/cheeze2000/candle

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             cheeze2000
maintainer:         me@cheeze2000.net

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Candle
                    , Candle.Handler
                    , Candle.Main
                    , Candle.Request
                    , Candle.Response
                    , Candle.Router

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , case-insensitive
                    , http-types
                    , mtl
                    , text
                    , wai
                    , warp
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wno-unused-do-bind
      -Wpartial-fields
      -Wredundant-constraints

test-suite candle-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
