cabal-version:      2.4
name:               candle
version:            0.1.0.0
synopsis:           Minimalist web framework written in Haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/cheeze2000/candle

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             cheeze2000
maintainer:         me@cheeze2000.net

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
      aeson
    , base ^>=4.14.3.0
    , bytestring
    , case-insensitive
    , http-types
    , mtl
    , text
    , wai
    , warp
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unused-do-bind
    -Wpartial-fields
    -Wredundant-constraints

library
  import:          shared-properties
  hs-source-dirs:  src
  exposed-modules:
    Candle
    Candle.Handler
    Candle.Main
    Candle.Request
    Candle.Response
    Candle.Router

test-suite candle-test
  import:         shared-properties
  build-depends:  candle
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs

executable candle-example-hello-world
  import:         shared-properties
  build-depends:  candle
  hs-source-dirs: examples/hello-world
  main-is:        Main.hs

executable candle-example-request-accessors
  import:         shared-properties
  build-depends:  candle
  hs-source-dirs: examples/request-accessors
  main-is:        Main.hs

executable candle-example-response-modifiers
  import:         shared-properties
  build-depends:  candle
  hs-source-dirs: examples/response-modifiers
  main-is:        Main.hs
